Adds Figma link for reference and remove false comment

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,8 @@
 
   <!-- SECTION -->
   <main>
-
+    <!-- REVIEW WHY DOESN'T THIS LOOK LIKE THE FIGMA? Do you need the link bro? -->
+    <!-- https://www.figma.com/file/rNwHk8BA070C41NvOPANNl/Bird-Brain?type=design&node-id=0-1&mode=design&t=T2DecCUOresSIhEK-0 -->
     <section id="router-view">
       <!-- primary viewport -->
     </section>
