fixed typo on date picker

--- a/client/index.html
+++ b/client/index.html
@@ -92,7 +92,7 @@
 
             <div class="mb-3">
               <label for="dateSeen" class="fw-bold">When did you see this bird?</label>
-              <input type="date" name="daeSeen" id="dateSeen" max="">
+              <input type="date" name="dateSeen" id="dateSeen" max="">
             </div>
 
             <div class="text-end">
